[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/Breakout.gd" type="Script" id=1]
[ext_resource path="res://sprites/box_black_bg.png" type="Texture" id=2]
[ext_resource path="res://scripts/Paddle.gd" type="Script" id=3]
[ext_resource path="res://sfx/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://sprites/square.png" type="Texture" id=5]
[ext_resource path="res://sprites/brick_widest.png" type="Texture" id=6]
[ext_resource path="res://scenes/ShaderOverlay.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/SoundPlayer.gd" type="Script" id=8]
[ext_resource path="res://sfx/explosion.wav" type="AudioStream" id=9]
[ext_resource path="res://TeenyTinyPixls.tres" type="DynamicFont" id=10]
[ext_resource path="res://scripts/Hud.gd" type="Script" id=11]
[ext_resource path="res://sprites/BallSprite.tres" type="Texture" id=12]
[ext_resource path="res://scripts/ScreenShake.gd" type="Script" id=13]
[ext_resource path="res://sfx/explosion2.wav" type="AudioStream" id=14]
[ext_resource path="res://theme.tres" type="Theme" id=15]
[ext_resource path="res://scenes/CustomButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://sfx/blipSelect.wav" type="AudioStream" id=17]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 528, 8 )

[sub_resource type="RectangleShape2D" id=6]
resource_local_to_scene = true
extents = Vector2( 8, 300 )

[sub_resource type="RectangleShape2D" id=7]
resource_local_to_scene = true
extents = Vector2( 8, 300 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 12 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 24, 12 )

[sub_resource type="RectangleShape2D" id=8]
resource_local_to_scene = true
extents = Vector2( 4, 300 )

[sub_resource type="RectangleShape2D" id=9]
resource_local_to_scene = true
extents = Vector2( 4, 300 )

[node name="Breakout" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
self_modulate = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
use_parent_material = true
position = Vector2( -40, -40 )
scale = Vector2( 69, 41.5 )
texture = ExtResource( 5 )
centered = false

[node name="ScreenBounds" type="StaticBody2D" parent="."]
position = Vector2( 512, 300 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ceiling" type="CollisionShape2D" parent="ScreenBounds"]
position = Vector2( 0, -308 )
shape = SubResource( 4 )

[node name="LeftWall" type="CollisionShape2D" parent="ScreenBounds"]
position = Vector2( -520, 0 )
shape = SubResource( 6 )

[node name="RightWall" type="CollisionShape2D" parent="ScreenBounds"]
position = Vector2( 520, 0 )
shape = SubResource( 7 )

[node name="SoundPlayer" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 8 )

[node name="Hit" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 4 )

[node name="Explosion" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 9 )
volume_db = 6.0
pitch_scale = 0.61

[node name="Explosion2" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 14 )

[node name="Select" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 17 )

[node name="Paddle" type="KinematicBody2D" parent="."]
use_parent_material = true
position = Vector2( 512, 524 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="FakeBall" type="Sprite" parent="Paddle"]
position = Vector2( 0, -18 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="Paddle"]
self_modulate = Color( 0, 0.835294, 1, 1 )
use_parent_material = true
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="CollisionShape2DWide" type="CollisionShape2D" parent="Paddle"]
shape = SubResource( 3 )

[node name="CollisionShape2DSmall" type="CollisionShape2D" parent="Paddle"]
visible = false
shape = SubResource( 10 )
disabled = true

[node name="InnerBounds" type="StaticBody2D" parent="."]
use_parent_material = true
position = Vector2( 512, 300 )

[node name="InnerLeftWall" type="CollisionShape2D" parent="InnerBounds"]
use_parent_material = true
position = Vector2( -340, 0 )
shape = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="InnerBounds/InnerLeftWall"]
use_parent_material = true
position = Vector2( 0, 4 )
scale = Vector2( 0.5, 50 )
texture = ExtResource( 5 )

[node name="InnerRightWall" type="CollisionShape2D" parent="InnerBounds"]
use_parent_material = true
position = Vector2( 340, 0 )
shape = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="InnerBounds/InnerRightWall"]
use_parent_material = true
position = Vector2( 0, 4 )
scale = Vector2( 0.5, 50 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 13 )

[node name="Level0" parent="." instance_placeholder="res://scenes/Level0.tscn"]

[node name="Hud" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
theme = ExtResource( 15 )
script = ExtResource( 11 )

[node name="SidebarLeft" type="GridContainer" parent="Hud"]
use_parent_material = true
margin_left = 864.0
margin_top = 184.0
margin_right = 1020.0
margin_bottom = 416.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="Score" type="VBoxContainer" parent="Hud/SidebarLeft"]
margin_right = 156.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="ScoreTitle" type="Label" parent="Hud/SidebarLeft/Score"]
use_parent_material = true
margin_right = 156.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 10 )
text = "SCORE"
align = 1

[node name="ScoreNumber" type="Label" parent="Hud/SidebarLeft/Score"]
margin_top = 43.0
margin_right = 156.0
margin_bottom = 82.0
text = "0"
align = 1

[node name="Spacer" type="Control" parent="Hud/SidebarLeft"]
margin_top = 86.0
margin_right = 156.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Balls" type="VBoxContainer" parent="Hud/SidebarLeft"]
margin_top = 150.0
margin_right = 156.0
margin_bottom = 232.0
size_flags_horizontal = 3

[node name="BallsTitle" type="Label" parent="Hud/SidebarLeft/Balls"]
margin_right = 156.0
margin_bottom = 39.0
text = "LIVES"
align = 1

[node name="BallsNumber" type="Label" parent="Hud/SidebarLeft/Balls"]
margin_top = 43.0
margin_right = 156.0
margin_bottom = 82.0
text = "3"
align = 1

[node name="GameEndOverlay" type="ColorRect" parent="Hud"]
pause_mode = 2
visible = false
margin_left = -40.0
margin_top = -40.0
margin_right = 1064.0
margin_bottom = 624.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.752941 )

[node name="GameEndDialog" type="NinePatchRect" parent="Hud/GameEndOverlay"]
margin_left = 360.0
margin_top = 200.0
margin_right = 744.0
margin_bottom = 456.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="FinalScoreTitle" type="Label" parent="Hud/GameEndOverlay/GameEndDialog"]
margin_left = 56.0
margin_top = 40.0
margin_right = 336.0
margin_bottom = 80.0
text = "FINAL SCORE"
align = 1
valign = 1
clip_text = true

[node name="FinalScoreNumber" type="Label" parent="Hud/GameEndOverlay/GameEndDialog"]
margin_left = 11.0
margin_top = 88.0
margin_right = 379.0
margin_bottom = 144.0
text = "0"
align = 1
valign = 1
autowrap = true

[node name="ExitButton" parent="Hud/GameEndOverlay/GameEndDialog" instance=ExtResource( 16 )]
margin_left = 16.192
margin_top = 146.432
margin_right = 144.192
margin_bottom = 210.432
label_text = "EXIT"
signal_name = "button_pressed"

[node name="RetryButton" parent="Hud/GameEndOverlay/GameEndDialog" instance=ExtResource( 16 )]
margin_left = 192.192
margin_top = 146.432
margin_right = 320.192
margin_bottom = 210.432
label_text = "RETRY"
signal_name = "retry_button_pressed"

[node name="ShaderOverlay" parent="." instance=ExtResource( 7 )]
